2017-02-02  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-618

	* WORK IN PROGRESS!!!  TestMonteCarloDataPrepare, TestRteCalcMC and
	TestTMatrix are currently failing.

	* src/cloudbox.cc, src/m_cloudbox.cc, src/m_disort.cc,
	src/m_optproperties.cc, src/m_rt4.cc, src/m_tmatrix.cc, src/methods.cc,
	src/montecarlo.cc, src/optproperties.{cc,h}, src/rt4.cc, src/rte.cc,
	src/tmatrix.{cc,h}, src/xml_io_compound_types.cc:

	Replacements for new ptype naming:

	PTYPE_MACROS_ISO -> PTYPE_TOTAL_RND
	PTYPE_HORIZ_AL   -> PTYPE_AZIMUTH_RND

2017-02-02  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-617

	* WORK IN PROGRESS!!!

	* Jana and me are currently working on introducing SingleScatteringData
	version 3. Therefore, temporarily horizontally_aligned data can't be
	written from ARTS.

	That means that TestMonteCarloDataPrepare, TestRteCalcMC and
	TestTMatrix are currently failing.

	* optproperties.{cc,h}:

	Copied PTypeFromString to PType2FromString.

	Adapted PTypeFromString and PTypeToString to SingleScatteringData
	format 3: "horizontally_aligned" -> "azimuthally_random",
	"macroscopically_isotropic" -> "totally_random".

	(ConvertAzimuthallyRandomSingleScatteringData):

	Added skeleton for conversion of older SingleScatteringData to
	version 3.

	* src/xml_io_compound_types.cc:

	Added reading/writing support for SingleScatteringData version 3.

	Temporarily throw a runtime error if azimuthally_random data is tried
	to be written.

	* controlfiles/artscomponents/tmatrix/TestTMatrix.arts:

	Replaced "horizontally_aligned" by "azimuthally_random".

2017-02-01  Alex Bobryshev  <oleksandr.bobryshev@uni-hamburg.de>

	* arts-2-3-616
	
	* controlfiles/instruments/metmm/TestMetMM.arts: in the comments
	added the link to the documentation of met_mm_accuracy.

2017-02-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-615

	* Summary: surface_skin_t is now an output of surface_rtprop_agenda.
