@@ -11943,13 +11943,10 @@ void define_md_data_raw()
          "Known issues of ARTS implementation:\n"
          "- Surface altitude is not an interface parameter. Surface is\n"
          "  implicitly assumed to be at the lowest atmospheric level.\n"
-         "- Surface temperature not an interface parameter, but implicitly\n"
-         "  assumed to to be of lowest atmospheric level temperature.\n"
          "- Only Lambertian surface reflection is implemented so far.\n"
          "- TOA incoming radiation is so far assumed as blackbody cosmic\n"
          "  background (temperature taken from the ARTS-internal constant).\n"
-         "- Scattering angle grids of all scattering elements have to be\n"
-         "  identical (except if *pfct_method* is 'interpolate').\n"
+         "- *pfct_method* 'interpolate' currently not implemented here.\n"
          "\n"
          "The keyword *pfct_method* allows to chose the method to extract the\n"
          "scattering matrix. 'interpolate' considers temperature dependence,\n"
@@ -11958,8 +11955,7 @@ void define_md_data_raw()
          "'high' the highest T-point, and 'median' the median T-point. As\n"
          "different scattering elements can have different temperature grids,\n"
          "the actual temperature value used can differ between the scattering\n"
-         "elements. Currently, other methods than 'interpolate' require all\n"
-         "scattering elements to be given on identical scattering angle grids.\n"
+         "elements.\n"
          "Note that this keyword solely affects the scattering matrix;\n"
          "extinction matrix and absorption vector are always interpolated to\n"
          "the actual temperature.\n"
